# dynamodb-tutorial-with-fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.txt  compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/clients/: __init__.py  dynamodb_client.py
app/models/nosql/: __init__.py  _constants.py  activity.py  comment.py  like.py  session.py
app/models/rdb/: blog.py  blog_post.py
app/services/: __init__.py  activity_service.py  blog_service.py
app/templates/: base.html  index.html  post_detail.html
app/templates/components/: activity_feed.html
cli/: init_data.py  init_dynamodb.py
docs/: dynamodb_structure.drawio
