[project]
name = "dynamodb-tutorial-with-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.26",
    "fastapi[standard]>=0.128.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[dynamodb]>=1.42.28",
    "ruff>=0.14.11",
]
